--- a/content/projects/chronark.com.mdx
+++ b/content/projects/chronark.com.mdx
@@ -1,5 +1,5 @@
 ---
-title: chronark.com
+title: tamir-nakar-dev
 description: The website you're looking at
 repository: chronark/chronark.com
 url: https://chronark.com
