--- a/content/projects/hive.mdx
+++ b/content/projects/hive.mdx
@@ -6,5 +6,21 @@ published: true
 url: https://chromewebstore.google.com/detail/hive-bookmarks/mgpaacedpjkjfnmjhbfiolffpmpdebdo?utm_source=portfolio&utm_medium=portfolio
 ---
 
-[![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
+import Gallery from './gallery3.tsx'
 
+{/* [![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
+[![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
+[![](https://unkey.dev/images/landing/app.png)](https://unkey.dev) */}
+
+
+
+
+<Gallery images={[
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
+
+ 
+]} />                 
