feat(Gallery component): add video support

--- a/content/projects/hive.mdx
+++ b/content/projects/hive.mdx
@@ -6,21 +6,21 @@ published: true
 url: https://chromewebstore.google.com/detail/hive-bookmarks/mgpaacedpjkjfnmjhbfiolffpmpdebdo?utm_source=portfolio&utm_medium=portfolio
 ---
 
-import Gallery from './gallery3.tsx'
+import Gallery from 'app/components/gallery.tsx'
 
 {/* [![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
 [![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
 [![](https://unkey.dev/images/landing/app.png)](https://unkey.dev) */}
 
-
-
-
-<Gallery images={[
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" },
+ 
 
  
+<Gallery images={[
+    {src: 'https://www.youtube.com/embed/bqMwvch8RSQ?si=ymICAyVXkDH5tVkJ', description: "Image 1", type:'video' },
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1", type: 'image' },
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1",  type: 'image' },
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" ,type: 'image' },
+    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" ,type: 'image'},
+
+   
 ]} />                   
