--- a/content/projects/hive.mdx
+++ b/content/projects/hive.mdx
@@ -1,26 +1,26 @@
 ---
 title: Hive
-description: Hive is a bookmark manager available as a Chrome extension on the Chrome Web Store, boasting hundreds of active users. Its main feature is the "go-to" functionality, which enables users to assign aliases to bookmarks for easy navigation using only the keyboard. Additionally, Hive offers a search capability for users to effortlessly locate their bookmarks. 
+description:  Chrome bookmarks extension for enhanced efficiency, allows users to navigate among their bookmarks without having to reach for the mouse. This extension has thousands of downloads and hundreds of active users.
 date: "2020-07-18"
 published: true
 url: https://chromewebstore.google.com/detail/hive-bookmarks/mgpaacedpjkjfnmjhbfiolffpmpdebdo?utm_source=portfolio&utm_medium=portfolio
----
+--- 
 
-import Gallery from 'app/components/gallery.tsx'
+import Gallery from 'app/components/gallery.tsx' 
 
-{/* [![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
-[![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
-[![](https://unkey.dev/images/landing/app.png)](https://unkey.dev) */}
-
+ <p><b>The Hive app was my first step into the world of extensions. I was always thinking that Chrome could do better in terms of bookmark management, and I wanted a way to navigate among my bookmarks quickly, <u>without having to reach for the mouse</u>. I couldn't have imagined back then that this extension would have thousands of downloads and hundreds of active users! 🤩 </b></p>
+ <p>Hive is a bookmark manager Chrome extension <a target="_blank" href ="https://chromewebstore.google.com/detail/hive-bookmarks/mgpaacedpjkjfnmjhbfiolffpmpdebdo?utm_source=portfolio&utm_medium=portfolio">available to download on the Chrome Web Store</a>, boasting hundreds of active users. Its main feature is the "go-to" functionality, which enables users to assign aliases to bookmarks for easy navigation using only the keyboard. Additionally, Hive offers a search capability for users to effortlessly locate their bookmarks. </p>
+ <p>The 1-minute promotional video below explains Hive's features.</p>
  
+ ### Stack
 
- 
-<Gallery images={[
-    {src: 'https://www.youtube.com/embed/bqMwvch8RSQ?si=ymICAyVXkDH5tVkJ', description: "Image 1", type:'video' },
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1", type: 'image' },
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1",  type: 'image' },
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" ,type: 'image' },
-    {src: 'https://picsum.photos/seed/1/800/600', description: "Image 1" ,type: 'image'},
+ 100% vanilla-js (yes you read right!)
 
-   
-]} />                   
+ ## Gallery
+
+<Gallery config={{iconColor: '#9f9f9f'}} images={[
+    {src: 'https://www.youtube.com/embed/bqMwvch8RSQ?si=ymICAyVXkDH5tVkJ', type:'video' },
+    {src: 'https://lh3.googleusercontent.com/2I3ECJN-EcfKHVJ4HmU5NTzaNADTct4GFAzQu539KmukoGyjPZODDWl_4IubUWmUfJ8U8DKYpMoHLIXJ9WLcpZjL5g=s1280-w1280-h800', description: "Look & Feel", type: 'image' },
+    {src: 'https://lh3.googleusercontent.com/ETF-3SLgBYatUPAlPi2701ca5GbZg2m_EMxfhe6c2gQ-9hxcE3BOBt684lyghrXjAmnwQIh73x9JKZVj3k4Jgab59VU=s1280-w1280-h800', description: "Search bookmarks",  type: 'image' },
+    {src: 'https://lh3.googleusercontent.com/0cbSpqhzhDmadutbSuTkP_zKSmw4b4APDaRNqKyROddtPkblhH26KStNAB8fmUtpRKAletmTaja5SDRT9hi_S1By=s1280-w1280-h800', description: "Right click menu" ,type: 'image' },  
+]} />                       
