--- a/content/projects/hive.mdx
+++ b/content/projects/hive.mdx
@@ -12,7 +12,7 @@ import Gallery from 'app/components/gallery.tsx'
  <p>Hive is a bookmark manager Chrome extension <a target="_blank" href ="https://chromewebstore.google.com/detail/hive-bookmarks/mgpaacedpjkjfnmjhbfiolffpmpdebdo?utm_source=portfolio&utm_medium=portfolio">available to download on the Chrome Web Store</a>, boasting hundreds of active users. Its main feature is the "go-to" functionality, which enables users to assign aliases to bookmarks for easy navigation using only the keyboard. Additionally, Hive offers a search capability for users to effortlessly locate their bookmarks. </p>
  <p>The 1-minute promotional video below explains Hive's features.</p>
  
- ### Stack
+ ### Tech Stack
 
  100% vanilla-js (yes you read right!)
 
