feat(bupe and bomber man + general order):

--- a/content/projects/flip-it.mdx
+++ b/content/projects/flip-it.mdx
@@ -3,7 +3,7 @@ title: flip-it!
 description: A memory cards game with customizable cards. This is a Client-Server project made completely using plain Vanilla.js. The client is a pure SPA (single page application) that makes AJAX calls to the server to read, validate, and write scores onto the scoreboard.
 date: "2019-04-26"
 published: true
-url: https://flip-it-memory-game.vercel.app/
+demo: https://flip-it-memory-game.vercel.app/
 repository: tamir-nakar/flip-it-memory-game
 ---
 
