--- a/content/projects/tamir-nakar-dev-portfolio.mdx
+++ b/content/projects/tamir-nakar-dev-portfolio.mdx
@@ -1,10 +1,9 @@
 ---
-title: tamir-nakar-dev
-description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
+title: tamir-nakar-dev-portfolio
+description: The website you're looking at. Built with Next.js
+repository: /tamir-nakar/portfolio-next.js
 published: true
-date: 2023-03-28
+date: 2024-02-16
 ---
 
 
