--- a/content/projects/bupe.mdx
+++ b/content/projects/bupe.mdx
@@ -1,6 +1,6 @@
 ---
 title: Bupe
-description: Stands for "Best Url Parser Ever". A Chrome extension that will parse urls LIVE (maybe I should have called it "BLUPE" then?). Still under development
+description: Stands for "Best Url Parser Ever". A Chrome extension that will parse urls LIVE (maybe I should have called it "BLUPE" then?). Yet under development
 published: true
 date: 2023-12-23
 repository: /tamir-nakar/bupe
@@ -8,10 +8,7 @@ repository: /tamir-nakar/bupe
 import Gallery from 'app/components/gallery.tsx' 
 
 
-This page is still under construction.
-
-
-![under construction](/app/img/coming_soon.jpeg)
+![coming soon](/img/coming_soon.png)
 
 
 {/* <Gallery config={{iconColor: '#9f9f9f'}} images={[
