--- a/content/projects/hive.mdx
+++ b/content/projects/hive.mdx
@@ -1,7 +1,7 @@
 ---
 title: Hive
 description:  Chrome bookmarks extension for enhanced efficiency, allows users to navigate among their bookmarks without having to reach for the mouse. This extension has thousands of downloads and hundreds of active users.
-date: "2020-07-18"
+date: 2020-07-18
 published: true
 url: https://chromewebstore.google.com/detail/hive-bookmarks/mgpaacedpjkjfnmjhbfiolffpmpdebdo?utm_source=portfolio&utm_medium=portfolio
 --- 
