--- a/content/projects/tamir-nakar-dev-portfolio.mdx
+++ b/content/projects/tamir-nakar-dev-portfolio.mdx
@@ -1,13 +1,16 @@
 ---
-title: tamir-nakar-dev-portfolio
-description: The website you're looking at. Built with Next.js
-repository: /tamir-nakar/portfolio-next.js
+title: Dev-Portfolio
+description:  The website you're looking at. Built with Next.js, Redis as database, Hosted in Vercel. Hope you're enjoying it!
 published: true
 date: 2024-02-16
----
+--- 
 
 
-Like so many others, I just wanted a place to collect some projects I worked on. Maybe I'll add a blog, maybe I won't. I'm not sure yet.
+ <p><b> Like many others, I too wanted a polished platform to showcase my projects.</b></p>
+ <p> My first go at a developer portfolio involved `WordPress` and `Elementor`, with my projects hosted on `Heroku`. It did the job, but over time, I felt it lacked the versatility I craved. While the plugins were handy, they couldn't quite deliver that extra something I was after. </p>
+ <p> Recently, I've been delving into `Next.js`, and I've got to say, the mix of `React`'s flexibility as a server-side rendering engine, along with the CMS-like perks of `MDX`, is absolutely  brilliant! Plus, the way it seamlessly integrates with `Vercel`, where both my site and projects are hosted, just adds to the smooth sailing. Managing my content this way feels seamless and efficient. </p>
+ 
+ ### Tech Stack
 
-If you like the design, check out the Repository on GitHub.
-
+ * Next.js (React as Server-side rendering)
+ * DB: Redis
