--- a/content/projects/flip-it.mdx
+++ b/content/projects/flip-it.mdx
@@ -1,7 +1,7 @@
 ---
 title: flip-it!
 description: A memory cards game with customizable cards. This is a Client-Server project made completely using plain Vanilla.js. The client is a pure SPA (single page application) that makes AJAX calls to the server to read, validate, and write scores onto the scoreboard.
-date: "2019-04-26"
+date: 2019-04-26
 published: true
 demo: https://flip-it-memory-game.vercel.app/
 repository: tamir-nakar/flip-it-memory-game
@@ -31,7 +31,8 @@ import Gallery from 'app/components/gallery.tsx'
 
 <Gallery config={{iconColor: '#9f9f9f'}} images={[
     {src: 'https://github.com/tamir-nakar/flip-it-memory-game/blob/master/documentation/preview_gif.gif?raw=true', type:'image' },
-    {src: 'https://lh3.googleusercontent.com/2I3ECJN-EcfKHVJ4HmU5NTzaNADTct4GFAzQu539KmukoGyjPZODDWl_4IubUWmUfJ8U8DKYpMoHLIXJ9WLcpZjL5g=s1280-w1280-h800', description: "Look & Feel", type: 'image' },
-    {src: 'https://lh3.googleusercontent.com/ETF-3SLgBYatUPAlPi2701ca5GbZg2m_EMxfhe6c2gQ-9hxcE3BOBt684lyghrXjAmnwQIh73x9JKZVj3k4Jgab59VU=s1280-w1280-h800', description: "Search bookmarks",  type: 'image' },
-    {src: 'https://lh3.googleusercontent.com/0cbSpqhzhDmadutbSuTkP_zKSmw4b4APDaRNqKyROddtPkblhH26KStNAB8fmUtpRKAletmTaja5SDRT9hi_S1By=s1280-w1280-h800', description: "Right click menu" ,type: 'image' },  
+    {src: 'https://github.com/tamir-nakar/flip-it-memory-game/blob/master/documentation/server_is_down.jpg?raw=true', description: "Server is down alert in offline mode", type: 'image' },
+    {src: '/img/flip-it/flip-it_new_record.jpg', description: "New record",  type: 'image' },
+    {src: '/img/flip-it/flip-it_south-park-deck.jpg', description: "South Park deck" ,type: 'image' },  
+    {src: '/img/flip-it/flip-it_customizing-deck.jpg', description: "Customizing a deck" ,type: 'image' },  
 ]} />                       
