feat(bomber-man):

--- a/content/projects/bomber-man.mdx
+++ b/content/projects/bomber-man.mdx
@@ -4,6 +4,7 @@ description: A remake for the classic bomber-man video game. Developed in Javasc
 published: true
 date: 2020-03-01
 repository: /tamir-nakar/bomber_man
+demo: https://bomber-man-js.vercel.app/
 ---
 import Gallery from 'app/components/gallery.tsx' 
 
