style(bomber-man): content

--- a/content/projects/bomber-man.mdx
+++ b/content/projects/bomber-man.mdx
@@ -10,7 +10,7 @@ import Gallery from 'app/components/gallery.tsx'
 
 
 <p><b> Building a memory game is nice, but I really wanted to take my skills to the next level! Bomber-Man is a high-framerate game designed and developed in accordance with the classic Bomber-Man game. It is built in plain JS using the `Phaser.js` library (to handle animations and high-speed rendering).</b></p>
-<p>What was really challenging in making this app was sticking to the rules of the original game. I was determined to implement every perk (extra bomb, increased firepower, increased speed, detonator, and bomb-kicking) and did not compromise on any aspect of the game (well, maybe a bit on the art design 😅) until I was completely satisfied with the game flow.</p>
+<p>What was really challenging in making this app was sticking to the rules of the original game. I was determined to implement every power-up (extra bomb, increased firepower, increased speed, detonator, and bomb-kicking) and did not compromise on any aspect of the game (well, maybe a bit on the art design 😅) until I was completely satisfied with the game flow.</p>
 <p>The game is designed for Person vs. Person or Person vs. AI gameplay, supports up to 4 players, and is mobile-friendly as well. I'm really proud of my AI algorithm that was completely self-developed. It's not perfect, but it does the job when you don't have a human rival at the moment (showcased in the GIF below).</p>
 <p>I think it would be really nice to incorporate a real AI solution for this game using `reinforcement training`, as well as an online experience. Hopefully, I'll find some time to get into it! 💪🏻</p>
 
