style(ato): update description formatting for consistency and clarity

--- a/content/projects/ato.mdx
+++ b/content/projects/ato.mdx
@@ -1,6 +1,6 @@
 ---
 title: ATO - AI Tab Organizer
-description: AI-powered Chrome extension for intelligent tab management. Automatically organizes browser tabs by category, last access, or usage patterns — helping users stay focused even with hundreds of open tabs. Trusted by hundreds of users, including paying customers.
+description: AI-powered Chrome extension for intelligent tab management. Automatically organizes browser tabs by category, last access, or usage patterns - helping users stay focused even with hundreds of open tabs. Trusted by hundreds of users, including paying customers.
 date: 2024-10-13
 published: true
 url: https://www.atobase.app/
@@ -13,26 +13,26 @@ import Gallery from 'app/components/gallery.tsx'
 
 ATO is a production-grade, AI-powered Chrome extension that intelligently organizes browser tabs at scale.
 It supports real-time and on-demand tab grouping using semantic AI, usage prediction, and access history.
-The project is a full end-to-end system (extension, backend, and website), used daily by hundreds of users — including paying customers — and built with a scalable AWS-based architecture and a tokenized AI usage model.
+The project is a full end-to-end system (extension, backend, and website), used daily by hundreds of users - including paying customers - and built with a scalable AWS-based architecture and a tokenized AI usage model.
 
-ATO (AI Tab Organizer) was born out of a very real problem I had myself: my browser constantly turned into chaos. Dozens — sometimes hundreds — of open tabs across multiple windows, all competing for attention.
+ATO (AI Tab Organizer) was born out of a very real problem I had myself: my browser constantly turned into chaos. Dozens - sometimes hundreds - of open tabs across multiple windows, all competing for attention.
 
-Instead of closing tabs and losing context, I wanted a system that could understand what each tab represents and organize everything intelligently — with minimal effort from the user.
+Instead of closing tabs and losing context, I wanted a system that could understand what each tab represents and organize everything intelligently - with minimal effort from the user.
 
 That idea grew into ATO, a full-scale product that today has hundreds of users, real usage at scale, and active paying subscribers. 🚀
 
 ## What ATO Does
 
-ATO automatically sorts, groups, and manages browser tabs using real AI — turning tab overload into a clean, structured workspace.
+ATO automatically sorts, groups, and manages browser tabs using real AI - turning tab overload into a clean, structured workspace.
 
 ### Two ways to use ATO
 
-- **Organize on demand**: One click instantly organizes all open tabs. Perfect for heavy tab users (20–300 tabs).
-- **Dynamic auto-organizing**: Every new tab is organized the moment it’s opened — keeping the browser clean at all times.
+- **Organize on demand**: One click instantly organizes all open tabs. Perfect for heavy tab users (20-300 tabs).
+- **Dynamic auto-organizing**: Every new tab is organized the moment it’s opened - keeping the browser clean at all times.
 
 ### Smart AI organization methods
 
-- **By category (semantic grouping)**: Tabs are grouped into meaningful domains like News, Shopping, Finance, Work, Docs, Social, Entertainment, Tools, and more — based on content, not just URLs.
+- **By category (semantic grouping)**: Tabs are grouped into meaningful domains like News, Shopping, Finance, Work, Docs, Social, Entertainment, Tools, and more - based on content, not just URLs.
 - **By last access**: Recently used tabs stay front and center, while older tabs are grouped away neatly.
 - **By frequency (prediction mode)**: Tabs are prioritized based on usage patterns, predicting what the user is most likely to open next.
 
@@ -51,7 +51,7 @@ All actions are designed to be fast, predictable, and low-friction.
 
 ## Architecture & Technical Depth
 
-ATO is not just a Chrome extension — it’s a complete system made of three coordinated parts:
+ATO is not just a Chrome extension - it’s a complete system made of three coordinated parts:
 
 - **ATO Client (Chrome Extension)**: Built with **Plasmo**, enabling modern React-based development and smooth extension DX.
 - **ATO Server**: Deployed on **AWS Lambda**, using:
@@ -79,7 +79,7 @@ This approach prioritizes:
 - **Active daily users**
 - **Paying customers** using the product in real workflows
 
-ATO is continuously evolving based on real feedback and usage patterns — not just ideas on paper.
+ATO is continuously evolving based on real feedback and usage patterns - not just ideas on paper.
 
 ## Tech Stack
 
