feat(contact): add GitHub stats fetching and display functionality

--- a/content/projects/ato.mdx
+++ b/content/projects/ato.mdx
@@ -13,7 +13,7 @@ import Gallery from 'app/components/gallery.tsx'
 
 ATO is a production-grade, AI-powered Chrome extension that intelligently organizes browser tabs at scale.
 It supports real-time and on-demand tab grouping using semantic AI, usage prediction, and access history.
-The project is a full end-to-end system (extension, backend, and website), used daily by hundreds of users - including paying customers - and built with a scalable AWS-based architecture and a tokenized AI usage model.
+The project is a full end-to-end system (extension, backend, and website), used daily by hundreds of users - **including paying customers** - and built with a scalable AWS-based architecture and a tokenized AI usage model.
 
 ATO (AI Tab Organizer) was born out of a very real problem I had myself: my browser constantly turned into chaos. Dozens - sometimes hundreds - of open tabs across multiple windows, all competing for attention.
 
