fix(readme): update screenshot format and change project publication status to draft

--- a/content/projects/bupe.mdx
+++ b/content/projects/bupe.mdx
@@ -1,9 +1,10 @@
 ---
 title: Bupe
 description: Stands for "Best Url Parser Ever". A Chrome extension that will parse urls LIVE (maybe I should have called it "BLUPE" then?). Yet under development
-published: true
+published: false
 date: 2023-12-23
 repository: /tamir-nakar/bupe
+
 ---
 import Gallery from 'app/components/gallery.tsx' 
 
